--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,8 @@
     </div>
 
     <nav class="sidebar-nav">
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
+
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
