--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,9 +21,9 @@
         {% endif %}
       {% endfor %}
 
-      <a href="{{ site.baseurl }}blob-files/security_requirements_workshop.pdf" target="_blank">Security Requirements PDF</a>
-      <a href="{{ site.baseurl }}blob-files/security_requirements_workshop.pptx" target="_blank">Security Requirements PPTX</a>
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/blob-files/security_requirements_workshop.pdf" target="_blank">Security Requirements PDF</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/blob-files/security_requirements_workshop.pptx" target="_blank">Security Requirements PPTX</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}" target="_blank">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
 
