--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == "README.html" %} active{% endif %}" href="{{ site.baseurl }}/README.html">Home</a>
+      <a class="sidebar-nav-item{% if page.url == "/" %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item{% if page.url == "FUNCTIONAL_ARCHITECTURE.html" %} active{% endif %}" href="{{ site.baseurl }}/FUNCTIONAL_ARCHITECTURE.html">Functional Architecture</a>
       <ul class="nav-list ">
         <li class="nav-list-item ">
