Second typo fix
Signed-off-by: Rob Tjalma <rob@tjalma.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
       <H3>Appendices</H3>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_CHOICES.html">Technology Choices</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_SURVEY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_SURVEY.html">Technology Survey</a>
-      <a class="sidebar-nav-item{% if page.url == "TOOL_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TOOL_CHOICES.html">Tool Choices</a>
+      <a class="sidebar-nav-item{% if page.url == "TOOLS_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TOOLS_CHOICES.html">Tools Choices</a>
 
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
