--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,6 +21,7 @@
         </li>
       </ul>
       <a class="sidebar-nav-item{% if page.url == "TECHNICAL_ARCHITECTURE.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNICAL_ARCHITECTURE.html">Technical Architecture</a>
+      <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY.html">Technology</a>
       <a class="sidebar-nav-item{% if page.url == "GLOSSARY.html" %} active{% endif %}" href="{{ site.baseurl }}/GLOSSARY.html">Glossary</a>
       <H3>Appendices</H3>
