First batch of added REUSE headers
Signed-off-by: Rob Tjalma <rob@tjalma.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2021 Alliander N.V.
+
+SPDX-License-Identifier: Apache-2.0
+-->
+
 <head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
