--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2021 Alliander N.V.
+
+SPDX-License-Identifier: Apache-2.0
+-->
+
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
