--- a/public/css/gitbutton.css
+++ b/public/css/gitbutton.css
@@ -1,3 +1,8 @@
+/*
+ * SPDX-FileCopyrightText: 2021 Alliander N.V.
+ *
+ * SPDX-License-Identifier: Apache-2.0
+ */
 
 .icon.medium > svg {
     display: inline-block;
