--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -1,4 +1,10 @@
 /*
+ * SPDX-FileCopyrightText: 2021 Alliander N.V.
+ *
+ * SPDX-License-Identifier: Apache-2.0
+ */
+
+/*
  *  __                  __
  * /\ \                /\ \
  * \ \ \___   __  __   \_\ \     __
