--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -1,4 +1,10 @@
 /*
+ * SPDX-FileCopyrightText: 2021 Alliander N.V.
+ *
+ * SPDX-License-Identifier: Apache-2.0
+ */
+
+/*
  *                        ___
  *                       /\_ \
  *  _____     ___     ___\//\ \      __
