--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,14 +26,14 @@ SPDX-License-Identifier: CC-BY-4.0
             <a href="{{ site.baseurl }}/CIM_61850_MAPPING_MVP.html" class="sidebar-nav-item">SSD Import from CIM MVP</a>
         </li>
       </ul>
-      <a class="sidebar-nav-item{% if page.url == "TECHNICAL_ARCHITECTURE.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNICAL_ARCHITECTURE.html">Technical Architecture</a>
-      <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
-      <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY.html" %} active{% endif %}" href="{{ site.baseurl }}/technical/TECHNOLOGY.html">Technology</a>
+      <a class="sidebar-nav-item{% if page.url == "TECHNICAL_ARCHITECTURE.html" %} active{% endif %}" href="{{ site.baseurl }}/technical/TECHNICAL_ARCHITECTURE.html">Technical Architecture</a>
       <ul class="nav-list ">
         <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/technical/COMPAS_SCL_DATA_SERVICE.html" class="sidebar-nav-item">CoMPAS SCL Data Service</a>
         </li>
       </ul>
+      <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
+      <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY.html">Technology</a>
       <a class="sidebar-nav-item{% if page.url == "GLOSSARY.html" %} active{% endif %}" href="{{ site.baseurl }}/GLOSSARY.html">Glossary</a>
       <H3>Appendices</H3>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_CHOICES.html">Technology Choices</a>
