--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,7 @@ SPDX-License-Identifier: CC-BY-4.0
       <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY.html">Technology</a>
       <a class="sidebar-nav-item{% if page.url == "GLOSSARY.html" %} active{% endif %}" href="{{ site.baseurl }}/GLOSSARY.html">Glossary</a>
-      <h2>Archive (old)</h2>
+      <h3 class="sidebar-archive-header">Archive (old)</h3>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_CHOICES.html">Technology Choices</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_SURVEY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_SURVEY.html">Technology Survey</a>
       <a class="sidebar-nav-item{% if page.url == "TOOLS_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TOOLS_CHOICES.html">Tools Choices</a>
