--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -104,6 +104,10 @@ a.sidebar-nav-item:focus {
   font-weight: bold;
 }
 
+.sidebar-archive {
+  color: #fff;
+}
+
 /* Sticky sidebar
  *
  * Add the `sidebar-sticky` class to the sidebar's container to affix it the
