Added GitHub Actions to menu.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,7 @@ SPDX-License-Identifier: CC-BY-4.0
       <ul class="nav-list ">
         <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/technical/COMPAS_SCL_DATA_SERVICE.html" class="sidebar-nav-item">CoMPAS SCL Data Service</a>
+          <a href="{{ site.baseurl }}/technical/GITHUB_ACTIONS.html" class="sidebar-nav-item">Github Actions</a>
         </li>
       </ul>
       <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
