--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@ SPDX-License-Identifier: CC-BY-4.0
         </li>
       </ul>
       <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
-      <a class="sidebar-nav-item{% if page.url == "ISSUE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/ISSUE_MANAGEMENT.html">Database Management</a>
+      <a class="sidebar-nav-item{% if page.url == "ISSUE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/ISSUE_MANAGEMENT.html">Issue Management</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY.html">Technology</a>
       <a class="sidebar-nav-item{% if page.url == "GLOSSARY.html" %} active{% endif %}" href="{{ site.baseurl }}/GLOSSARY.html">Glossary</a>
       <h3>Archive</h3>
