--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,8 @@ SPDX-License-Identifier: CC-BY-4.0
       <ul class="nav-list ">
         <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/technical/COMPAS_SCL_DATA_SERVICE.html" class="sidebar-nav-item">CoMPAS SCL Data Service</a>
+        </li>
+        <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/technical/GITHUB_ACTIONS.html" class="sidebar-nav-item">Github Actions</a>
         </li>
       </ul>
