--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,6 +34,9 @@ SPDX-License-Identifier: CC-BY-4.0
         <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/technical/GITHUB_ACTIONS.html" class="sidebar-nav-item">Github Actions</a>
         </li>
+        <li class="nav-list-item ">
+          <a href="{{ site.baseurl }}/technical/XSD_EXTENSIONS.html" class="sidebar-nav-item">XSD Extensions</a>
+        </li>
       </ul>
       <a class="sidebar-nav-item{% if page.url == "DATABASE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
       <a class="sidebar-nav-item{% if page.url == "ISSUE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/ISSUE_MANAGEMENT.html">Issue Management</a>
