Added MapStruct to technology overview.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,9 +22,6 @@ SPDX-License-Identifier: CC-BY-4.0
         <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/CIM_61850_MAPPING.html" class="sidebar-nav-item">SSD Import from CIM</a>
         </li>
-        <li class="nav-list-item ">
-            <a href="{{ site.baseurl }}/CIM_61850_MAPPING_MVP.html" class="sidebar-nav-item">SSD Import from CIM MVP</a>
-        </li>
       </ul>
       <a class="sidebar-nav-item{% if page.url == "TECHNICAL_ARCHITECTURE.html" %} active{% endif %}" href="{{ site.baseurl }}/technical/TECHNICAL_ARCHITECTURE.html">Technical Architecture</a>
       <ul class="nav-list ">
@@ -39,10 +36,12 @@ SPDX-License-Identifier: CC-BY-4.0
       <a class="sidebar-nav-item{% if page.url == "ISSUE_MANAGEMENT.html" %} active{% endif %}" href="{{ site.baseurl }}/ISSUE_MANAGEMENT.html">Issue Management</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY.html">Technology</a>
       <a class="sidebar-nav-item{% if page.url == "GLOSSARY.html" %} active{% endif %}" href="{{ site.baseurl }}/GLOSSARY.html">Glossary</a>
-      <h3>Archive</h3>
+
+      <span class="sidebar-nav-item">Archive</span>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_CHOICES.html">Technology Choices</a>
       <a class="sidebar-nav-item{% if page.url == "TECHNOLOGY_SURVEY.html" %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY_SURVEY.html">Technology Survey</a>
       <a class="sidebar-nav-item{% if page.url == "TOOLS_CHOICES.html" %} active{% endif %}" href="{{ site.baseurl }}/TOOLS_CHOICES.html">Tools Choices</a>
+      <a class="sidebar-nav-item{% if page.url == "CIM_61850_MAPPING_MVP.html" %} active{% endif %}" href="{{ site.baseurl }}/CIM_61850_MAPPING_MVP.html">SSD Import from CIM MVP</a>
 
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
