Added Dependabot description.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,9 @@ SPDX-License-Identifier: CC-BY-4.0
           <a href="{{ site.baseurl }}/technical/GITHUB_ACTIONS.html" class="sidebar-nav-item">Github Actions</a>
         </li>
         <li class="nav-list-item ">
+          <a href="{{ site.baseurl }}/technical/DEPENDABOT.html" class="sidebar-nav-item">Dependabot</a>
+        </li>
+        <li class="nav-list-item ">
           <a href="{{ site.baseurl }}/technical/XSD_EXTENSIONS.html" class="sidebar-nav-item">XSD Extensions</a>
         </li>
       </ul>
