Added logo and position of sidebar. Make separate Archive pages with links and removed from sidebar.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,7 @@ SPDX-License-Identifier: CC-BY-4.0
       <a class="sidebar-nav-item{% if page.url == '/TECHNOLOGY.html' %} active{% endif %}" href="{{ site.baseurl }}/TECHNOLOGY.html">Technology</a>
       <a class="sidebar-nav-item{% if page.url == '/GLOSSARY.html' %} active{% endif %}" href="{{ site.baseurl }}/GLOSSARY.html">Glossary</a>
 
-      <a class="sidebar-nav-item{% if page.url == '/ARCHIVE.html' %} active{% endif %}" href="{{ site.baseurl }}/ARCHIVE.html">Archive</a>
+      <a class="sidebar-nav-item{% if page.url == '/archive/ARCHIVE.html' %} active{% endif %}" href="{{ site.baseurl }}/archive/ARCHIVE.html">Archive</a>
     </nav>
 
     <p>Currently v{{ site.version }}</p>
