Updated proposal generic components.
Signed-off-by: Dennis Labordus <dennis.labordus@alliander.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,9 @@ SPDX-License-Identifier: CC-BY-4.0
         <li class="nav-list-item">
           <a class="sidebar-nav-item{% if page.url == '/technical/XSD_EXTENSIONS.html' %} active{% endif %}" href="{{ site.baseurl }}/technical/XSD_EXTENSIONS.html">XSD Extensions</a>
         </li>
+        <li class="nav-list-item">
+          <a class="sidebar-nav-item{% if page.url == '/technical/COMPAS_GENERIC_PROPOSAL.html' %} active{% endif %}" href="{{ site.baseurl }}/technical/COMPAS_GENERIC_PROPOSAL.html">Generic Modules Proposal</a>
+        </li>
       </ul>
       <a class="sidebar-nav-item{% if page.url == '/DATABASE_MANAGEMENT.html' %} active{% endif %}" href="{{ site.baseurl }}/DATABASE_MANAGEMENT.html">Database Management</a>
       <a class="sidebar-nav-item{% if page.url == '/ISSUE_MANAGEMENT.html' %} active{% endif %}" href="{{ site.baseurl }}/ISSUE_MANAGEMENT.html">Issue Management</a>
